--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tbd54566975/web5": "^0.7.11",
+    "antd": "^5.8.6",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
-  }
+  },
+  "type": "module"
 }
